--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -29,6 +29,7 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    cache: true
 
 # Assetic Configuration
 assetic:
