--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,3 @@
-ss_game:
-    resource: "@SSGameBundle/Resources/config/routing.yml"
-    prefix:   /
+#ss_game:
+#    resource: "@SSGameBundle/Resources/config/routing.yml"
+#    prefix:   /
