--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -1,3 +1,7 @@
+ss_poker_homepage:
+    path:     /
+    defaults: { _controller: "SSGameBundle:Default:index" }
+
 _wdt:
     resource: "@WebProfilerBundle/Resources/config/routing/wdt.xml"
     prefix:   /_wdt
