--- a/src/SS/Bundle/GameBundle/Resources/config/routing.yml
+++ b/src/SS/Bundle/GameBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-ss_game_homepage:
-    path:     /hello/{name}
+ss_poker_homepage:
+    path:     /
     defaults: { _controller: SSGameBundle:Default:index }
