--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,9 +1,35 @@
 # Learn more about services, parameters and containers at
 # http://symfony.com/doc/current/book/service_container.html
 parameters:
-#    parameter_name: value
+    cache_adapter: Memcached
+    cache_queries: true
+    stampede_protection: true
+    debug_cache : true
+    cache_ttl_secs : 60
 
 services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+
+
+    db_credentials:
+        class : SS\Bundle\GameBundle\Core\ConnectionCredentials
+        calls :
+            - [setUser, ["%database_user%"]]
+            - [setPass, ["%database_password%"]]
+            - [setHost, ["%database_host%"]]
+            - [setDatabase, ["%database_name%"]]
+            - [setPort, ["%database_port%"]]
+
+    cache:
+        class : SS\Bundle\GameBundle\Core\CacheCommon
+        arguments: ["%cache_adapter%", "%debug_cache%", "%stampede_protection%"]
+        scope : container
+
+    db:
+        class : SS\Bundle\GameBundle\Core\DBCommon
+        arguments : ["@db_credentials", "@cache", "%cache_queries%"]
+        scope : container
+
+
